JEKT-296 ❇️ New     - Pipeline        - DART_L1_Purchase_Order_MD_PO_HIST_JDE     - Dataset        - DS_JDE_01_F43199
🔁 Modified
    - Pipeline
       - DART_L1_Purchase_Order_MD_PO_HIST_SAP
    - Dataset
       - MD_PO_HIST

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -516,17 +516,33 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/DART_L1_Purchase_Order_MD_PO_HIST:
-    name: DART_L1_Purchase_Order_MD_PO_HIST
+    name: DART_L1_Purchase_Order_MD_PO_HIST_SAP
     description: ''
     author: jcacere7@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-05 12:54:52'
-    modifiedAt: '2023-04-14 14:40:32'
+    modifiedAt: '2023-04-17 03:02:07'
     datasets:
       inputs:
       - datasets/DS_SAP_01_EBKE
+      outputs:
+      - datasets/MD_PO_HIST
+    subgraphs: []
+    dependencies: {}
+  pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE:
+    name: DART_L1_Purchase_Order_MD_PO_HIST_JDE
+    description: ''
+    author: jcacere7@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-17 03:03:30'
+    modifiedAt: '2023-04-17 05:05:42'
+    datasets:
+      inputs:
+      - datasets/DS_JDE_01_F43199
       outputs:
       - datasets/MD_PO_HIST
     subgraphs: []
@@ -1437,7 +1453,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-13 18:00:51'
+    modifiedAt: '2023-04-17 05:05:42'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
@@ -6217,6 +6233,21 @@ datasets:
         author: jcacere7@its.jnj.com
         createdAt: '2023-04-06 13:16:05'
         modifiedAt: '2023-04-06 13:16:05'
+  datasets/DS_JDE_01_F43199:
+    name: DS_JDE_01_F43199
+    description: ''
+    author: jcacere7@its.jnj.com
+    createdAt: '2023-04-17 03:16:51'
+    modifiedAt: '2023-04-17 03:41:21'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: jcacere7@its.jnj.com
+        createdAt: '2023-04-17 03:16:51'
+        modifiedAt: '2023-04-17 03:16:51'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
