❇️ New     - Pipeline        - SK_SAP_DELETE_ME

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1534,6 +1534,20 @@ pipelines:
       - datasets/MD_MATL
     subgraphs: []
     dependencies: {}
+  pipelines/SK_SAP_DELETE_ME:
+    name: SK_SAP_DELETE_ME
+    description: ''
+    author: skostadi@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-17 14:55:34'
+    modifiedAt: '2023-04-17 14:55:44'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
