JEKT-136🔁 Modified     - Dataset        - DS_SAP_P01_VBAP        - MD_SLS_ORDR_LINE     - Pipeline        - SAP_01_MD_SLS_ORDR_LINE_bba        - JDE_01_MD_SLS_ORDR_LINE_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR        - SAP_01_MD_SLS_ORDR_LINE_geu        - SAP_01_MD_SLS_ORDR_LINE_MBP
❇️ New
    - Pipeline
       - SAP_01_MD_SLS_ORDR_LINE_ATL

--- a/src/datasets/DS_SAP_P01_VBAP/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_P01_VBAP/pbt_aspects.yml
@@ -1472,6 +1472,41 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: STOCKLOC
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: SLOCTYPE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MSR_RET_REASON
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MSR_REFUND_CODE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MSR_APPROV_BLOCK
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: _BEV1_SRFUND
     type: string
     nullable: true
@@ -1479,35 +1514,21 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _SOPROMET_KOSTL
+  - name: AUFPL_OLC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _SOPROMET_LRESN
+  - name: APLZL_OLC
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: _SOPROMET_NOSHP
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _SOPROMET_POSNR
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _SOPROMET_KZLGB
+  - name: FERC_IND
     type: string
     nullable: true
     metadata:
@@ -1549,294 +1570,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: ZZKZRKB
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZZUSTA
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZKOSTL
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZBULAN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZKUNAD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZEBELN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZEBELP
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZKZSUB
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZLRESN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZGRUPO
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZNO_IMSS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZEXT_IMSS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZFAREL
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZTRAY
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZTIMESTAMP
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZPOSNR_ORIG
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZTNDNO
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZAWARD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZLINENO
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZOFFNO
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZVBELN_MON
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZPOSNR_MON
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZLFDNR_MON
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZWADAT_IST_MON
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: STOCKLOC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SLOCTYPE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MSR_RET_REASON
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MSR_REFUND_CODE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MSR_APPROV_BLOCK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: NRAB_KNUMH
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TRMRISK_RELEVANT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TC_AUT_DET
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: MANUAL_TC_REASON
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FISCAL_INCENTIVE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: TAX_SUBJECT_ST
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FISCAL_INCENTIVE_ID
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SPCSTO
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: REVACC_REFID
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: REVACC_REFTYPE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: AUFPL_OLC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: APLZL_OLC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FERC_IND
+  - name: BUDGET_PD
     type: string
     nullable: true
     metadata:
@@ -1850,6 +1584,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: MILL_SE_GPOSN
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: PRS_OBJNR
     type: string
     nullable: true
@@ -1857,35 +1598,147 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: PRS_SD_SPSNR
+  - name: ARSNUM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PRS_WORK_PERIOD
+  - name: ARSPOS
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: PARGB
+  - name: WTYSC_CLMITEM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: AUFPL_OAA
+  - name: ZZ_SHIP_FROM
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: APLZL_OAA
+  - name: ZZ_SHIP_TO
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ_CONTRACT_NUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ_CONT_PRICE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ_CONT_PRC_ELE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ_SHIP_COT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ_ORIGIN_COT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ_CUSTOMER
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ_ORDER_REASON
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ_MATERIAL_LOT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ_HIERARCHY
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ_AI_CODE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ_AI_QTY
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ_AI_STATUS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ_RET_QTY
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ_AF_MATNR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ_AF_CHARG
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ZZ_AF_MENGE
     type: string
     nullable: true
     metadata:
