JEKT-1341 Lookup Gem Created ❇️ New     - Pipeline        - SAP_01_MD_PLNT     - Dataset        - DS_SAP_01_T005T

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -800,6 +800,21 @@ pipelines:
       - datasets/MD_MATL
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_01_MD_PLNT:
+    name: SAP_01_MD_PLNT
+    description: ''
+    author: mbolado1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-17 19:33:05'
+    modifiedAt: '2023-04-17 19:52:57'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_T005T
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -4431,6 +4446,21 @@ datasets:
         author: natkins7@its.jnj.com
         createdAt: '2023-04-14 12:32:14'
         modifiedAt: '2023-04-14 12:32:14'
+  datasets/DS_SAP_01_T005T:
+    name: DS_SAP_01_T005T
+    description: ''
+    author: mbolado1@its.jnj.com
+    createdAt: '2023-04-17 19:37:53'
+    modifiedAt: '2023-04-17 19:52:14'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: mbolado1@its.jnj.com
+        createdAt: '2023-04-17 19:37:53'
+        modifiedAt: '2023-04-17 19:37:53'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
