JEKT-296 🔁 Modified     - Pipeline        - SAP_MD_PO_HIST        - JDE_MD_PO_HIST

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -516,14 +516,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/DART_L1_Purchase_Order_MD_PO_HIST:
-    name: DART_L1_Purchase_Order_MD_PO_HIST_SAP
+    name: SAP_MD_PO_HIST
     description: ''
     author: jcacere7@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-05 12:54:52'
-    modifiedAt: '2023-04-17 03:02:07'
+    modifiedAt: '2023-04-17 23:54:24'
     datasets:
       inputs:
       - datasets/DS_SAP_01_EBKE
@@ -532,14 +532,14 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/DART_L1_Purchase_Order_MD_PO_HIST_JDE:
-    name: DART_L1_Purchase_Order_MD_PO_HIST_JDE
+    name: JDE_MD_PO_HIST
     description: ''
     author: jcacere7@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-17 03:03:30'
-    modifiedAt: '2023-04-17 05:05:42'
+    modifiedAt: '2023-04-17 23:55:38'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F43199
