JEKT-226 remove failing unit tests before merge to Beta 🔁 Modified     - Pipeline        - SAP_01_MD_BILL_DOC_HDR_BBA_BBN     - Dataset        - MD_BILL_DOC_HDR        - DS_SAP_01_VBRK

--- a/src/datasets/DS_SAP_01_VBRK/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_01_VBRK/pbt_aspects.yml
@@ -2,7 +2,7 @@ version: 1
 schema:
   type: struct
   fields:
-  - name: MANDT
+  - name: _deleted_
     type: string
     nullable: true
     metadata:
@@ -10,6 +10,13 @@ schema:
       mappings: []
       tags: []
   - name: VBELN
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: MANDT
     type: string
     nullable: true
     metadata:
@@ -143,6 +150,13 @@ schema:
       mappings: []
       tags: []
   - name: INCO2
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: EXPKZ
     type: string
     nullable: true
     metadata:
@@ -380,6 +394,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: EXNUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: STCEG
     type: string
     nullable: true
@@ -583,6 +604,13 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: LCNUM
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
   - name: J_1AFITP
     type: string
     nullable: true
@@ -591,6 +619,20 @@ schema:
       mappings: []
       tags: []
   - name: KURRF_DAT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: AKWAE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: AKKUR
     type: string
     nullable: true
     metadata:
@@ -681,210 +723,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: CHANGED_ON
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: EXPKZ
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: EXNUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: AKWAE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: AKKUR
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: LCNUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: _DATAAGING
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BUCHK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: GBSTK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: RELIK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UVALS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: UVPRS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FKSAK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: FKARA
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: VF_STATUS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: VF_TODO
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BDR_STATUS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BDR_REF
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BDR_REF_LOGSYS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BDR_REF_VBTYP
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PBD_STATUS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ABSTK
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DRAFT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ACTIVEDOCUMENT
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: GRWCU
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: BLART
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: INTRA_REL
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: INTRA_EXCL
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ACCRREL
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: PSPSD
+  - name: VBTYP_EXT
     type: string
     nullable: true
     metadata:
@@ -898,62 +737,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: INCOV
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: INCO2_L
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: INCO3_L
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: SDM_VERSION
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: DUMMY_BILLINGDOC_INCL_EEW_PS
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZAPCGKH
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: APCGK_EXTENDH
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZABDATH
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: DPC_REL
     type: string
     nullable: true
@@ -961,42 +744,182 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: AD01BASDOC
+  - name: ISHEINRI
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: AD01FAREG
+  - name: ISHFALAR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: VCHRNMBR
+  - name: ISHFALNR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: J_3GKBAUL
+  - name: ISHKOSTR
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: J_3GKENIE
+  - name: ISHKTART
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: KUNWE
+  - name: ISHABART
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ISHLFDVV
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ISHSAMNR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ISHDATZW
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ISHRESID
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ISHEMTYP
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ISHFALRN
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ISHLFDBEW
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ISHUSERF0
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ISHLAND
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ISHKTARI
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ISHADINS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ISHFPKZF
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ISHSEKZF
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ISHFOREI
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ISHBLDAT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ISHBUDAT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ISHSTOID
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ISHLTEXT
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ISHBELNR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ISHCOMNUM
     type: string
     nullable: true
     metadata:
@@ -1045,56 +968,49 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: CLRST
+  - name: ZZ_IND_CODE1
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: APM_APPROVAL_STATUS
+  - name: ZZ_IND_CODE2
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: APM_APPROVAL_REASON
+  - name: ZZ_GOVT_PUR_REQ
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: GLO_LOG_REF1_HD
+  - name: ZZ_GOVT_PO
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: SRCEDOC_EXT_COMM_SYST_TYPE
+  - name: ZZ_GOVT_CONT
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ICO_LIFNR
+  - name: ZZ_POTYPE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ1_NETPRICE_BDH
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZ1_DISTRIBUTIONCHANEL_BDH
+  - name: ZZ_INT_CRDR
     type: string
     nullable: true
     metadata:
@@ -1136,7 +1052,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _deleted_
+  - name: _infa_bigint_sequence_
     type: string
     nullable: true
     metadata:
