JEKT-1341 Join & SchemaTransform Gems created ❇️ New     - Dataset        - DS_SAP_01_T001K        - DS_SAP_01_T001W
🔁 Modified
    - Pipeline
       - SAP_01_MD_PLNT

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -808,9 +808,11 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-17 19:33:05'
-    modifiedAt: '2023-04-17 19:52:57'
+    modifiedAt: '2023-04-18 12:58:35'
     datasets:
       inputs:
+      - datasets/DS_SAP_01_T001K
+      - datasets/DS_SAP_01_T001W
       - datasets/DS_SAP_01_T005T
       outputs: []
     subgraphs: []
@@ -4461,6 +4463,36 @@ datasets:
         author: mbolado1@its.jnj.com
         createdAt: '2023-04-17 19:37:53'
         modifiedAt: '2023-04-17 19:37:53'
+  datasets/DS_SAP_01_T001W:
+    name: DS_SAP_01_T001W
+    description: ''
+    author: mbolado1@its.jnj.com
+    createdAt: '2023-04-18 12:29:11'
+    modifiedAt: '2023-04-18 12:29:11'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: mbolado1@its.jnj.com
+        createdAt: '2023-04-18 12:29:11'
+        modifiedAt: '2023-04-18 12:29:11'
+  datasets/DS_SAP_01_T001K:
+    name: DS_SAP_01_T001K
+    description: ''
+    author: mbolado1@its.jnj.com
+    createdAt: '2023-04-18 12:37:19'
+    modifiedAt: '2023-04-18 12:37:19'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: mbolado1@its.jnj.com
+        createdAt: '2023-04-18 12:37:19'
+        modifiedAt: '2023-04-18 12:37:19'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
