JEKT-176 (Added 2 new systems ATL and FSN) ❇️ New     - Pipeline        - SAP_MD_MATL_INV_FSN     - Dataset        - DS_SAP_0000003_MKOL        - DS_SAP_0000004_MSLB        - DS_SAP_0000005_MSSL        - DS_SAP_0000002_MCHB        - DS_SAP_00000004_MSLB
🔁 Modified
    - Job
       - JOB_MD_MATL_INV
    - Dataset
       - DS_SAP_0000006_MARA
    - Pipeline
       - SAP_MD_MATL_INV_ATL

--- a/src/datasets/DS_SAP_0000006_MARA/pbt_aspects.yml
+++ b/src/datasets/DS_SAP_0000006_MARA/pbt_aspects.yml
@@ -1122,13 +1122,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: ADPROF
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: _BEV1_LULEINH
     type: string
     nullable: true
@@ -1311,13 +1304,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: ADSPC_SPC
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: IMATN
     type: string
     nullable: true
@@ -1479,133 +1465,49 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_MAT_NUM_FOR
+  - name: BRAND_CODE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_BU
+  - name: COLOR_CODE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_MEDI_ELIG
+  - name: STYLE_CODE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_MEDI_LOW_UNIT
+  - name: PROD_FAM_CODE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_IPP_FLAG
+  - name: PKG_UOM_CODE
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_FORM
+  - name: WEB_AVAIL
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ZZ_STRENGTH
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZ_REGIMEN
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZ_PROD_INFO
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZ_REORDER_LEVEL
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZ_REP_DRAW
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZ_MAX_REP_DRAW
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZ_INTNR
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZ_INTKTX
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZ_LIMS_FLAG
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZ_CRNUM
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZ_SPEC_DATE
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZ_BRAND_CD
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
-  - name: ZZ_PRPLANT
+  - name: CASE_LABEL_FAM
     type: string
     nullable: true
     metadata:
