--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1469,10 +1469,35 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-18 00:25:54'
-    modifiedAt: '2023-04-18 00:53:24'
+    modifiedAt: '2023-04-18 13:36:44'
     datasets:
       inputs:
       - datasets/DS_SAP_0000001_MARD
+      - datasets/DS_SAP_0000002_MCHB
+      - datasets/DS_SAP_0000003_MKOL
+      - datasets/DS_SAP_0000004_MSLB
+      - datasets/DS_SAP_0000005_MSSL
+      - datasets/DS_SAP_0000006_MARA
+      outputs:
+      - datasets/MD_MATL_INV
+    subgraphs: []
+    dependencies: {}
+  pipelines/SAP_MD_MATL_INV_FSN:
+    name: SAP_MD_MATL_INV_FSN
+    description: SAP System MD_MATL_INV 5 Tables
+    author: ypatel8@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-18 13:19:51'
+    modifiedAt: '2023-04-18 13:33:21'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_00000004_MSLB
+      - datasets/DS_SAP_0000001_MARD
+      - datasets/DS_SAP_0000002_MCHB
+      - datasets/DS_SAP_0000003_MKOL
+      - datasets/DS_SAP_0000005_MSSL
       - datasets/DS_SAP_0000006_MARA
       outputs:
       - datasets/MD_MATL_INV
@@ -7694,7 +7719,7 @@ datasets:
     description: ''
     author: ypatel8@its.jnj.com
     createdAt: '2023-04-18 00:53:20'
-    modifiedAt: '2023-04-18 00:53:20'
+    modifiedAt: '2023-04-18 13:31:26'
     mode: batch
     physicalDatasets:
       dev_ajp_nonprod:
@@ -7704,6 +7729,81 @@ datasets:
         author: ypatel8@its.jnj.com
         createdAt: '2023-04-18 00:53:20'
         modifiedAt: '2023-04-18 00:53:20'
+  datasets/DS_SAP_0000002_MCHB:
+    name: DS_SAP_0000002_MCHB
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-04-18 12:41:17'
+    modifiedAt: '2023-04-18 13:28:29'
+    mode: batch
+    physicalDatasets:
+      dev_ajp_nonprod:
+        fabricId: 4
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-04-18 12:41:17'
+        modifiedAt: '2023-04-18 12:41:17'
+  datasets/DS_SAP_0000003_MKOL:
+    name: DS_SAP_0000003_MKOL
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-04-18 12:48:39'
+    modifiedAt: '2023-04-18 13:28:59'
+    mode: batch
+    physicalDatasets:
+      dev_ajp_nonprod:
+        fabricId: 4
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-04-18 12:48:39'
+        modifiedAt: '2023-04-18 12:48:39'
+  datasets/DS_SAP_0000004_MSLB:
+    name: DS_SAP_0000004_MSLB
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-04-18 12:50:56'
+    modifiedAt: '2023-04-18 13:36:03'
+    mode: batch
+    physicalDatasets:
+      dev_ajp_nonprod:
+        fabricId: 4
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-04-18 12:50:56'
+        modifiedAt: '2023-04-18 12:50:56'
+  datasets/DS_SAP_0000005_MSSL:
+    name: DS_SAP_0000005_MSSL
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-04-18 12:52:29'
+    modifiedAt: '2023-04-18 13:30:47'
+    mode: batch
+    physicalDatasets:
+      dev_ajp_nonprod:
+        fabricId: 4
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-04-18 12:52:29'
+        modifiedAt: '2023-04-18 12:52:29'
+  datasets/DS_SAP_00000004_MSLB:
+    name: DS_SAP_00000004_MSLB
+    description: ''
+    author: ypatel8@its.jnj.com
+    createdAt: '2023-04-18 13:23:16'
+    modifiedAt: '2023-04-18 13:26:22'
+    mode: batch
+    physicalDatasets:
+      dev_ajp_nonprod:
+        fabricId: 4
+        datasetType: Database
+        description: ''
+        author: ypatel8@its.jnj.com
+        createdAt: '2023-04-18 13:23:16'
+        modifiedAt: '2023-04-18 13:23:16'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
@@ -8537,9 +8637,11 @@ jobs:
     - pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
     - pipelines/SAP_MD_MATL_INV_BWI
     - pipelines/SAP_MD_MATL_INV_MBP
+    - pipelines/SAP_MD_MATL_INV_FSN
     - pipelines/SAP_MD_MATL_INV_HCS
     - pipelines/SAP_MD_MATL_INV_P01
     - pipelines/SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
+    - pipelines/SAP_MD_MATL_INV_ATL
     - pipelines/SAP_MD_MATL_INV_TAI
     - pipelines/JDE_01_MD_MATL_INV
     jobClusterMode:
@@ -8548,7 +8650,7 @@ jobs:
       clusterId: null
     enabled: false
     createdAt: '2023-04-04 14:54:35'
-    modifiedAt: '2023-04-17 22:59:32'
+    modifiedAt: '2023-04-18 13:40:10'
     author: natkins7@its.jnj.com
   jobs/JOB_MD_MATL_BOM:
     name: JOB_MD_MATL_BOM
