JEKT-136 🔁 Modified     - Pipeline        - SAP_01_MD_SLS_ORDR_LINE_hmd     - Dataset        - MD_SLS_ORDR_LINE

--- a/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
+++ b/src/datasets/MD_SLS_ORDR_LINE/pbt_aspects.yml
@@ -3236,7 +3236,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: trim(VBAP.J_3GLVART)
+  - name: ACTV_TYPE
     type: string
     nullable: true
     metadata:
